# genetic_algo

./: CMakeLists.txt  LICENSE  README.md
include/: ga.h
include/util/: crossovers.h
src/examples/math_functions/: CMakeLists.txt  cross_in_tray_func_demo.cpp  function_minimizer_ga.cpp  function_minimizer_ga.h  mccormick_func_demo.cpp  schaffer_n4_func_demo.cpp
src/examples/n_queen/: CMakeLists.txt  nqueen_demo.cpp  nqueen_ga.cpp  nqueen_ga.h
